--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ email: dominic.wellington@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
  Occasional overspill from other places 
 baseurl: "/" # the subpath of your site, e.g. /blog
-#url: "https://findthethread.blog" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://findthethread.blog" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
 github_username: riotnrrd-eu 
 
