--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Find The Thread
-email: dominic.wellington@gmail.com
+email: dominic.wellingtonNO@SPAMgmail.com
 description: >- # this means to ignore newlines until "baseurl:"
  Occasional overspill from other places 
 baseurl: "/" # the subpath of your site, e.g. /blog
