--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,8 @@ url: "https://findthethread.blog" # the base hostname & protocol for your site, 
 #twitter_username: jekyllrb
 github_username: riotnrrd-eu 
 
+permalink: /:title/
+
 # Build settings
 theme: minima
 plugins:
